[package]
name = "harvester_siem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4.0"
env_logger = "0.9.0"
